--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '2.3-4' %}
+{% set version = '2.4-0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,16 +12,23 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/sandwich_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/sandwich/sandwich_{{ version }}.tar.gz
-  sha256: 2052f7e3d19a05c372f422c5480f1058a4107e420cd038a9bd7240c4f0746d4d
+  sha256: 34315b9ced76a3ed109aead7b8f77eea6398a6eb2e1ad71515a48bed9808ccc0
+
+
+  # patches:
+   # List any patch files here
+   # - fix.patch
 
 build:
+  # If this is a new build for the same version, increment the build number.
   number: 0
-  skip: true  # [win32]
 
+  # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
+# Suggests: AER, car, geepack, lattice, lmtest, MASS, multiwayvcov, pcse, plm, pscl, scatterplot3d, stats4, strucchange, survival
 requirements:
   build:
     - r-base
@@ -33,17 +40,48 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('sandwich')"  # [not win]
+    # You can put additional test commands to be run here.
+    - $R -e "library('sandwich')"           # [not win]
     - "\"%R%\" -e \"library('sandwich')\""  # [win]
+
+  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
+  # in the recipe that will be run at test time.
+
+  # requires:
+    # Put any additional test requirements here.
 
 about:
   home: https://CRAN.R-project.org/package=sandwich
   license: GPL-2 | GPL-3
-  summary: Model-robust standard error estimators for cross-sectional, time series, and longitudinal
-    data.
+  summary: Model-robust standard error estimators for cross-sectional, time series, clustered,
+    panel, and longitudinal data.
   license_family: GPL3
 
 extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - mingwandroid
+
+# The original CRAN metadata for this package was:
+
+# Package: sandwich
+# Version: 2.4-0
+# Date: 2017-07-26
+# Title: Robust Covariance Matrix Estimators
+# Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"), person(given = "Thomas", family = "Lumley", role = "aut", email = "tlumley@u.washington.edu"), person(given = "Susanne", family = "Berger", role = "ctb", email = "Susanne.Berger@uibk.ac.at"), person(given = "Nathaniel", family = "Graham", role = "ctb", email = "npgraham1@gmail.com"))
+# Description: Model-robust standard error estimators for cross-sectional, time series, clustered, panel, and longitudinal data.
+# Depends: R (>= 2.10.0)
+# Imports: stats, utils, zoo
+# Suggests: AER, car, geepack, lattice, lmtest, MASS, multiwayvcov, pcse, plm, pscl, scatterplot3d, stats4, strucchange, survival
+# License: GPL-2 | GPL-3
+# NeedsCompilation: no
+# Packaged: 2017-07-26 19:08:36 UTC; zeileis
+# Author: Achim Zeileis [aut, cre], Thomas Lumley [aut], Susanne Berger [ctb], Nathaniel Graham [ctb]
+# Maintainer: Achim Zeileis <Achim.Zeileis@R-project.org>
+# Repository: CRAN
+# Date/Publication: 2017-07-26 19:36:29 UTC
+
+# See
+# http://docs.continuum.io/conda/build.html for
+# more information about meta.yaml
