--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '2.4-0' %}
+{% set version = '2.5-1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -11,19 +11,20 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/sandwich_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/sandwich/sandwich_{{ version }}.tar.gz
-  sha256: 34315b9ced76a3ed109aead7b8f77eea6398a6eb2e1ad71515a48bed9808ccc0
+  sha256: dbef6f4d12b83e166f9a2508b7c732b04493641685d6758d29f3609e564166d6
 
 build:
   merge_build_host: True  # [win]
   # If this is a new build for the same version, increment the build number.
   number: 0
+  noarch: generic
 
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: AER, car, geepack, lattice, lmtest, MASS, multiwayvcov, pcse, plm, pscl, scatterplot3d, stats4, strucchange, survival
+# Suggests: AER, car, geepack, lattice, lmtest, MASS, multiwayvcov, parallel, pcse, plm, pscl, scatterplot3d, stats4, strucchange, survival
 requirements:
   build:
     - {{posix}}zip               # [win]
@@ -64,21 +65,21 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: sandwich
-# Version: 2.4-0
-# Date: 2017-07-26
+# Version: 2.5-1
+# Date: 2019-04-06
 # Title: Robust Covariance Matrix Estimators
-# Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org"), person(given = "Thomas", family = "Lumley", role = "aut", email = "tlumley@u.washington.edu"), person(given = "Susanne", family = "Berger", role = "ctb", email = "Susanne.Berger@uibk.ac.at"), person(given = "Nathaniel", family = "Graham", role = "ctb", email = "npgraham1@gmail.com"))
+# Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org", comment = c(ORCID = "0000-0003-0918-3766")), person(given = "Thomas", family = "Lumley", role = "aut", email = "tlumley@u.washington.edu"), person(given = "Susanne", family = "Berger", role = "ctb", email = "Susanne.Berger@uibk.ac.at"), person(given = "Nathaniel", family = "Graham", role = "ctb", email = "npgraham1@gmail.com"))
 # Description: Model-robust standard error estimators for cross-sectional, time series, clustered, panel, and longitudinal data.
 # Depends: R (>= 2.10.0)
 # Imports: stats, utils, zoo
-# Suggests: AER, car, geepack, lattice, lmtest, MASS, multiwayvcov, pcse, plm, pscl, scatterplot3d, stats4, strucchange, survival
+# Suggests: AER, car, geepack, lattice, lmtest, MASS, multiwayvcov, parallel, pcse, plm, pscl, scatterplot3d, stats4, strucchange, survival
 # License: GPL-2 | GPL-3
 # NeedsCompilation: no
-# Packaged: 2017-07-26 19:08:36 UTC; zeileis
-# Author: Achim Zeileis [aut, cre], Thomas Lumley [aut], Susanne Berger [ctb], Nathaniel Graham [ctb]
+# Packaged: 2019-04-06 21:24:19 UTC; zeileis
+# Author: Achim Zeileis [aut, cre] (<https://orcid.org/0000-0003-0918-3766>), Thomas Lumley [aut], Susanne Berger [ctb], Nathaniel Graham [ctb]
 # Maintainer: Achim Zeileis <Achim.Zeileis@R-project.org>
 # Repository: CRAN
-# Date/Publication: 2017-07-26 19:36:29 UTC
+# Date/Publication: 2019-04-06 21:59:16 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
